Added Sentence Handling

--- a/MinorProject/app/src/main/res/layout/activity_load_file.xml
+++ b/MinorProject/app/src/main/res/layout/activity_load_file.xml
@@ -6,24 +6,16 @@
     android:layout_height="match_parent"
     tools:context=".LoadFileActivity">
 
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/recyclerView2"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
     <TextView
         android:id="@+id/loadFile_textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Load a Text File"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="@+id/recyclerView2"
-        app:layout_constraintStart_toStartOf="@+id/recyclerView2"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.514" />
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/loadFileButton"
