--- a/MinorProject/app/src/main/res/layout/activity_new_user.xml
+++ b/MinorProject/app/src/main/res/layout/activity_new_user.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".NewUserActivity">
+    tools:context=".LoginHandling.NewUserActivity">
 
     <EditText
         android:id="@+id/emailEditText"
