--- a/MinorProject/app/src/main/res/layout/list_item.xml
+++ b/MinorProject/app/src/main/res/layout/list_item.xml
@@ -3,14 +3,14 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="64dp"
     android:layout_margin="16dp"
     android:background="#2196F3"
     app:cardCornerRadius="16dp">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="64dp">
+        android:layout_height="match_parent">
 
         <view
             android:id="@+id/view2"
