Added Login Functionality

--- a/MinorProject/app/src/main/res/layout/activity_new_user.xml
+++ b/MinorProject/app/src/main/res/layout/activity_new_user.xml
@@ -7,7 +7,7 @@
     tools:context=".LoginHandling.NewUserActivity">
 
     <EditText
-        android:id="@+id/emailEditText"
+        android:id="@+id/newEmailEditText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:ems="10"
@@ -20,7 +20,7 @@
         app:layout_constraintVertical_bias="0.3" />
 
     <EditText
-        android:id="@+id/passwordEditText"
+        android:id="@+id/newPasswordEditText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:ems="10"
@@ -29,11 +29,11 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/emailEditText"
+        app:layout_constraintTop_toBottomOf="@+id/newEmailEditText"
         app:layout_constraintVertical_bias="0.050000012" />
 
     <EditText
-        android:id="@+id/passwordEditText2"
+        android:id="@+id/rePasswordEditText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:ems="10"
@@ -42,17 +42,17 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/passwordEditText"
+        app:layout_constraintTop_toBottomOf="@+id/newPasswordEditText"
         app:layout_constraintVertical_bias="0.060000002" />
 
     <Button
-        android:id="@+id/button"
+        android:id="@+id/registerButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Register"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="@+id/passwordEditText2"
-        app:layout_constraintStart_toStartOf="@+id/passwordEditText2"
-        app:layout_constraintTop_toBottomOf="@+id/passwordEditText2"
+        app:layout_constraintEnd_toEndOf="@+id/rePasswordEditText"
+        app:layout_constraintStart_toStartOf="@+id/rePasswordEditText"
+        app:layout_constraintTop_toBottomOf="@+id/rePasswordEditText"
         app:layout_constraintVertical_bias="0.13" />
 </androidx.constraintlayout.widget.ConstraintLayout>
